# SOMA-X

./: .gitattributes  .gitignore  .gitlab-ci.yml  ATTRIBUTIONS.MD  CONTRIBUTING.MD  Dockerfile  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
assets/: SOMA_neutral.npz  correctives_model.pt  example_animation.npy
assets/GarmentMeasurements/: point.npz
assets/MHR/: mhr_model_lod1.pt  mhr_model_lod6.pt
assets/SMPL/: smpl_anim.npy
assets/calibration/: README.md  soma_t_pose.bvh
docs/: BIAS.md  EXPLAINABILITY.md  PRIVACY.md  SAFETY_and_SECURITY.md  bones_soma_bvh_to_smplx.md  model_card.md
soma/: __init__.py  _compat.py  assets.py  bones_smplx.py  correctives_model.py  identity_model.py  io.py  pose_inversion.py  soma.py  units.py
soma/geometry/: _utils.py  _warp_init.py  align_vectors_warp.py  barycentric_interp.py  batched_skinning.py  chamfer_warp.py  fused_refit_warp.py  interpolate.py  laplacian.py  lbs.py  lbs_warp.py  rig_utils.py  skeleton_transfer.py  transforms.py
tests/: __init__.py  test_dataloader.py  test_device.py  test_pose_inversion.py  test_pose_mirror.py  test_soma_layer.py
tools/: __init__.py  convert_amass_to_soma.py  convert_bones_soma_bvh_to_smplx.py  convert_gm_pca_to_npz.py  demo_soma_vis.py  docker-entrypoint.sh  download_assets.py  mhr2soma.py  shape_convert.py  smpl2soma.py  vis_pyrender.py
