[metadata]
name = py-soma-x
version = 0.1.0
description = SOMA body layer
long_description = file: README.md
long_description_content_type = text/markdown
author = NVIDIA Corporation
license = Apache-2.0
license_file = LICENSE
url = https://github.com/NVlabs/SOMA-X
project_urls =
    Bug Tracker = https://github.com/NVlabs/SOMA-X/issues
    Source Code = https://github.com/NVlabs/SOMA-X
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3
    Topic :: Scientific/Engineering

[options]
packages = find:
python_requires = >=3.8
install_requires =
    numpy
    scipy
    torch
    trimesh
    warp-lang
    rtree
    cholespy
    huggingface_hub

[options.extras_require]
smpl =
    smplx
    chumpy
anny =
    anny
    Pillow
dev =
    pytest
    ruff
    pre-commit
demo =
    pyrender
    tqdm
    imageio[ffmpeg]
all =
    smplx
    chumpy
    anny
    Pillow

[options.packages.find]
include =
    soma
    soma.*
